--- a/fe/sivishop/package.json
+++ b/fe/sivishop/package.json
@@ -12,6 +12,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
   },
